--- a/docs/fhatos_mmadt.adoc
+++ b/docs/fhatos_mmadt.adoc
@@ -63,16 +63,6 @@ bool::
 <!-- 🐖 ./main_runner.out "/mmadt/bool[true]" "bool[true]" "true" -->
 ++++
 
-[source,mmadt]
-----
-fhatos> /mmadt/bool[true]
-==>true
-fhatos> bool[true]
-==>bool[true]
-fhatos> true
-==>true
-----
-
 ++++
 <!-- 🐓 -->
 ++++
@@ -84,16 +74,6 @@ int::
 ++++
 <!-- 🐖 ./main_runner.out "/mmadt/int[6]" "int[6]" "6" -->
 ++++
-
-[source,mmadt]
-----
-fhatos> /mmadt/int[6]
-==>6
-fhatos> int[6]
-==>int[6]
-fhatos> 6
-==>6
-----
 
 ++++
 <!-- 🐓 -->
@@ -107,16 +87,6 @@ real::
 <!-- 🐖 ./main_runner.out "/mmadt/real[6.2]" "real[6.2]" "6.2" -->
 ++++
 
-[source,mmadt]
-----
-fhatos> /mmadt/real[6.2]
-==>6.200000
-fhatos> real[6.2]
-==>real[6.200000]
-fhatos> 6.2
-==>6.200000
-----
-
 ++++
 <!-- 🐓 -->
 ++++
@@ -129,16 +99,6 @@ str::
 <!-- 🐖 ./main_runner.out "/mmadt/str['cooties']" "str['cooties']" "'cooties'" -->
 ++++
 
-[source,mmadt]
-----
-fhatos> /mmadt/str['cooties']
-==>'cooties'
-fhatos> str['cooties']
-==>str['cooties']
-fhatos> 'cooties'
-==>'cooties'
-----
-
 ++++
 <!-- 🐓 -->
 ++++
@@ -150,16 +110,6 @@ uri::
 ++++
 <!-- 🐖 ./main_runner.out "/mmadt/uri[/dog/curly]" "uri[/dog/curly]" "/dog/curly" -->
 ++++
-
-[source,mmadt]
-----
-fhatos> /mmadt/uri[/dog/curly]
-==>/dog/curly
-fhatos> uri[/dog/curly]
-==>uri[/dog/curly]
-fhatos> /dog/curly
-==>/dog/curly
-----
 
 ++++
 <!-- 🐓 -->
@@ -178,16 +128,6 @@ lst[['a',2,true]]
 -->
 ++++
 
-[source,mmadt]
-----
-fhatos> /mmadt/lst[['a',2,true]]
-==>['a',2,true]
-fhatos> lst[['a',2,true]]
-==>lst[['a',2,true]]
-fhatos> ['a',2,true]
-==>['a',2,true]
-----
-
 ++++
 <!-- 🐓 -->
 ++++
@@ -204,16 +144,6 @@ rec[[a=>6,b=>false]]
 [a=>6,b=>false]
 -->
 ++++
-
-[source,mmadt]
-----
-fhatos> /mmadt/rec[[a=>6,b=>false]]
-==>[a=>6,b=>false]
-fhatos> rec[[a=>6,b=>false]]
-==>rec[[a=>6,b=>false]]
-fhatos> [a=>6,b=>false]
-==>[a=>6,b=>false]
-----
 
 ++++
 <!-- 🐓 -->
@@ -232,17 +162,6 @@ noobj
 
 -->
 ++++
-
-[source,mmadt]
-----
-fhatos> /mmadt/noobj[]
-fhatos> noobj[]
-fhatos> noobj
-fhatos>
-
-fhatos>
-
-----
 
 ++++
 <!-- 🐓 -->
@@ -283,27 +202,6 @@ The mechanics of `obj` typing are exemplified below using the generally useful t
 <!-- 🐖 ./main_runner.out "*/mmadt/ext/#/" -->
 ++++
 
-[source,mmadt]
-----
-fhatos> */mmadt/ext/#/
->[
-==>/mmadt/ext/C=>C()[is(gte(-273.14999))]
-==>/mmadt/ext/Ox=>Ox()[is(true)]
-==>/mmadt/ext/char=>char()[merge(2).count().is(eq(1))]
-==>/mmadt/ext/int16=>[int16][_]
-==>/mmadt/ext/int32=>[int32][_]
-==>/mmadt/ext/int8=>uint8()[is(gte(-127)).is(lte(128))]
-==>/mmadt/ext/ms=>[real][_]
-==>/mmadt/ext/ms/::/mmadt/as=>as(is(eq(/mmadt/ext/sec)))[cpp]
-==>/mmadt/ext/nat=>nat()[is(gte(0))]
-==>/mmadt/ext/prnt=>prnt()[is(gte(0.00000)).is(lte(100.00000))]
-==>/mmadt/ext/sec=>[real][_]
-==>/mmadt/ext/secret=>[str][_]
-==>/mmadt/ext/secret/::/mmadt/as=>as(type=>_)[cpp]
-==>/mmadt/ext/uint8=>uint8()[is(gte(0)).is(lte(255))]
->]
-----
-
 ++++
 <!-- 🐓 -->
 ++++
@@ -324,16 +222,6 @@ A https://en.wikipedia.org/wiki/Character_(computing)[char] is a `str` containin
 @a.as(str) + @b
 -->
 ++++
-
-[source,mmadt]
-----
-fhatos> *char
-==>char?int<=str()
-	[merge(2).count().is(eq(1))]
-fhatos> --- char['a']@a
-fhatos> --- char['b']@b
-fhatos> @a + @b
-----
 
 ++++
 <!-- 🐓 -->
@@ -356,27 +244,6 @@ nat[12]@a
 -->
 ++++
 
-[source,mmadt]
-----
-fhatos> *nat
-==>nat?int<=int()[is(gte(0))]
-fhatos> nat[12]
-==>nat[12]
-fhatos> nat[-30]
-[ERROR] [/mmadt/parser] -30 is not a nat as defined by nat()[is(gte(0))]
-		 \_nat[-30] is not applicable with /mmadt/ext/nat?dom=/mmadt/int&dc=1,1&rng=/mmadt/int&rc=1,1
-fhatos> nat[12]@a
-==>nat[12]@a
-fhatos> @a.minus(11)
-==>nat[1]@a
-fhatos> @a.minus(2)
-[ERROR] [/mmadt/parser] -1@a is not a nat as defined by nat()[is(gte(0))]
-		 \_nat[-1]@a is not applicable with /mmadt/ext/nat?dom=/mmadt/int&dc=1,1&rng=/mmadt/int&rc=1,1
-	  thrown at inst nat[1]@a => minus(0?int=>2)[cpp] [0=>2]
-fhatos> *a
-==>nat[1]@a
-----
-
 ++++
 <!-- 🐓 -->
 ++++
@@ -394,22 +261,10 @@ C[-274.0]
 -->
 ++++
 
-[source,mmadt]
-----
-fhatos> *C
-==>C?real<=real()[is(gte(-273.14999))]
-fhatos> C[0.0]
-==>C[0.000000]
-fhatos> C[274.0]
-==>C[274.000000]
-fhatos> C[-274.0]
-[ERROR] [/mmadt/parser] -274.00000 is not a C as defined by C()[is(gte(-273.14999))]
-		 \_C[-274.00000] is not applicable with /mmadt/ext/C?dom=/mmadt/real&dc=1,1&rng=/mmadt/real&rc=1,1
-----
-
 ++++
 <!-- 🐓 -->
 ++++
+
 --
 
 ====
@@ -465,16 +320,6 @@ band -> |band?int{?}<=int(_,_)[is(and([gte(*<0>),lte(*<1>)]))]
 -->
 ++++
 
-[source,mmadt]
-----
-fhatos> band -> |band?int{?}<=int(_,_)[is(and([gte(*<0>),lte(*<1>)]))]
-==>band?int{?}<=int(_,_)
-	[is(and([gte(from(0)),lte(from(1))]))]
-fhatos> 3.band(2,8)                                // <1>
-==>3
-fhatos> 10.band(2,8)                               // <2>
-----
-
 ++++
 <!-- 🐓 -->
 ++++
@@ -503,18 +348,6 @@ band -> |band?int{?}<=int(min=>_,max=>_)[is(and([gte(*min),lte(*max)]))]
 'abc'.band(2,8)                       --- <3>
 -->
 ++++
-
-[source,mmadt]
-----
-fhatos> band -> |band?int{?}<=int(min=>_,max=>_)[is(and([gte(*min),lte(*max)]))]
-==>band?int{?}<=int(min=>_,max=>_)
-	[is(and([gte(from(min)),lte(from(max))]))]
-fhatos> 3.band(2,8)                           // <1>
-==>3
-fhatos> 3.band(max=>8,min=>2)                 // <2>
-==>3
-fhatos> 'abc'.band(2,8)                       // <3>
-----
 
 ++++
 <!-- 🐓 -->
@@ -548,19 +381,6 @@ band -> |band?int{?}<=int(min=>else(2),max=>else(8))[is(and([gte(*min),lte(*max)
 -->
 ++++
 
-[source,mmadt]
-----
-fhatos> band -> |band?int{?}<=int(min=>else(2),max=>else(8))[is(and([gte(*min),lte(*max)]))]
-==>band?int{?}<=int(min=>else?noobj<=obj(2)[noobj],max=>else?noobj<=obj(8)[noobj])
-	[is(and([gte(from(min)),lte(from(max))]))]
-fhatos> 1.band(min=>1)                        // <1>
-==>1
-fhatos> 10.band()                             // <2>
-fhatos> {2,3,4,5}.band(min=>3,max=>4)         // <3>
-==>3
-==>4
-----
-
 ++++
 <!-- 🐓 -->
 ++++
@@ -590,18 +410,6 @@ band -> |band?int{?}<=int(min?nat=>else(2),max?nat=>else(8))[is(and([gte(*min),l
 -15.band(-20,-10)           --- <2>
 -->
 ++++
-
-[source,mmadt]
-----
-fhatos> band -> |band?int{?}<=int(min?nat=>else(2),max?nat=>else(8))[is(and([gte(*min),lte(*max)]))]
-==>band?int{?}<=int(min?nat=>else?noobj<=obj(2)[noobj],max?nat=>else?noobj<=obj(8)[noobj])
-	[is(and([gte(from(min)),lte(from(max))]))]
-fhatos> 15.band(10,20)              // <1>
-==>15
-fhatos> -15.band(-20,-10)           // <2>
-[ERROR] [/mmadt/parser] -20 is not a nat as defined by nat()[is(gte(0))]
-		 \_-20 is not applicable with /mmadt/ext/nat?dom=/mmadt/int&dc=1,1&rng=/mmadt/int&rc=1,1
-----
 
 ++++
 <!-- 🐓 -->
@@ -639,22 +447,6 @@ Finally, a degenerate anonymous `inst` with no specified variable frame is simpl
 -->
 ++++
 
-[source,mmadt]
-----
-fhatos> 10.(min=>2,max=>8)[is(and([gte(*min),lte(*max)]))]                // <1>
-fhatos> 10.(min=>minus(1),max=>plus(1))[is(and([gte(*min),lte(*max)]))]   // <2>
-==>10
-fhatos> 10.()[is(and([gte(*min),lte(*max)]))]                             // <3>
-[ERROR] [/mmadt/parser] noobj is not a int as defined by [int][_]
-		 \_/mmadt/noobj is not a subtype of /mmadt/int
-	  thrown at inst 10 => ()[is(and([gte(from(min)),lte(from(max))]))] [=>]
-fhatos> |((min=>2,max=>8)[is(and([gte(*min),lte(*max)]))])                // <4>
-==>?noobj<=obj(min=>2,max=>8)
-	[is(and([gte(from(min)),lte(from(max))]))]
-fhatos> 10.is(and([gte(minus(1)),lte(plus(1))]))                          // <5>
-==>10
-----
-
 ++++
 <!-- 🐓 -->
 ++++
@@ -677,17 +469,6 @@ is_divisible -> |is_divisble?bool<=int(by?int=>_)[mod(*by).eq(0)]
 10.is_divisible('abc')
 -->
 ++++
-
-[source,mmadt]
-----
-fhatos> is_divisible -> |is_divisble?bool<=int(by?int=>_)[mod(*by).eq(0)]
-==>is_divisble?bool<=int(by?int=>_)[mod(from(by)).eq(0)]
-fhatos> 10.is_divisible(2)
-==>true
-fhatos> 10.is_divisible('abc')
-[ERROR] [/mmadt/parser] 'abc' is not a int as defined by [int][_]
-		 \_/mmadt/str is not a subtype of /mmadt/int
-----
 
 ++++
 <!-- 🐓 -->
@@ -713,16 +494,6 @@ band -> |band?int{?}<=int(min=>_,max=>is(gt(*min)).else(*min.plus(1)))[is(gte(*m
 -->
 ++++
 
-[source,mmadt]
-----
-fhatos> band -> |band?int{?}<=int(min=>_,max=>is(gt(*min)).else(*min.plus(1)))[is(gte(*min)).is(lte(*max))]
-==>band?int{?}<=int(min=>_,max=>is?noobj<=obj(gt?noobj<=obj(from?noobj<=obj(min)[noobj])[noobj])[noobj].else?noobj<=obj(from?noobj<=obj(min)[noobj].plus?noobj<=obj(1)[noobj])[noobj])
-	[is(gte(from(min))).is(lte(from(max)))]
-fhatos> 2.band(min=>1,max=>1)                 // <1>
-[ERROR] [/mmadt/parser] noobj is not a int as defined by [int][_]
-		 \_/mmadt/noobj is not a subtype of /mmadt/int
-----
-
 ++++
 <!-- 🐓 -->
 ++++
@@ -743,10 +514,6 @@ is_divisible -> |is_divisble?bool<=int(by?int=>is(neq(0)).else(print('error').ma
 -->
 ++++
 
-[source,mmadt]
-----
-----
-
 ++++
 <!-- 🐓 -->
 ++++
@@ -763,16 +530,6 @@ int(a=>2)[*a]
 4 + int(a=>2)[+*a]
 -->
 ++++
-
-[source,mmadt]
-----
-fhatos> int(a=>2)[*a]
-==>2
-fhatos> 4 + int(a=>2)[*a]
-==>6
-fhatos> 4 + int(a=>2)[+*a]
-==>10
-----
 
 ++++
 <!-- 🐓 -->
@@ -817,20 +574,6 @@ y -> z
 **y
 -->
 ++++
-
-[source,mmadt]
-----
-fhatos> *y
-fhatos> *z
-fhatos> z -> 12
-==>12
-fhatos> y -> z
-==>z
-fhatos> *y
-==>z
-fhatos> **y
-==>12
-----
 
 ++++
 <!-- 🐓 -->
@@ -880,22 +623,6 @@ a -> 12
 -->
 ++++
 
-[source,mmadt]
-----
-fhatos> a -> 12
-==>12
-fhatos> *a.plus(10)
-==>22
-fhatos> *a
-==>12
-fhatos> @a
-==>12@a
-fhatos> @a.plus(10)
-==>22@a
-fhatos> *a
-==>22@a
-----
-
 ++++
 <!-- 🐓 -->
 ++++
@@ -923,25 +650,6 @@ a🧱
 ++++
 <!-- 🐖 ./main_runner.out "a?sub -> |to(b)" "*a?sub" "*b" "a->12" "*a" "*b" -->
 ++++
-
-[source,mmadt]
-----
-fhatos> a?sub -> |to(b)
-==>to?noobj<=obj(b)[noobj]
-fhatos> *a?sub
->sub[
-==>source=>/sys/scheduler
-==>pattern=>a
-==>on_recv=>to(b)
->]
-fhatos> *b
-fhatos> a->12
-==>12
-fhatos> *a
-==>12
-fhatos> *b
-==>12
-----
 
 ++++
 <!-- 🐓 -->
@@ -978,22 +686,6 @@ a -> 'axel'
 -->
 ++++
 
-[source,mmadt]
-----
-fhatos> a -> 'axel'
-==>'axel'
-fhatos> *a
-==>'axel'
-fhatos> *a + ' fantaxel'
-==>'axel fantaxel'
-fhatos> *a
-==>'axel'
-fhatos> @a + ' fantaxel'
-==>'axel fantaxel'@a
-fhatos> *a
-==>'axel fantaxel'@a
-----
-
 ++++
 <!-- 🐓 -->
 ++++
@@ -1015,41 +707,6 @@ thread[[loop=>^( /
 -->
 ++++
 
-[source,mmadt]
-----
-fhatos> thread[[loop=>^(
-          from(|c,0).print('c: {_}').
-          plus(1).to(c).
-          gt(10).to(t/halt).
-          is(_).print('\n'))]]@t
->thread[
-==>loop=>lift(from(block(c),0).print('c: {_}').plus(1).to(c).gt(10).to(t/halt).is(_).print('\n'))
-==>halt=>true
->]@t
-
-fhatos> fhatos> /sys/scheduler::spawn(@t)
-[INFO]  [/sys/scheduler] t thread spawned
->thread[
-==>loop=>lift(from(block(c),0).print('c: {_}').plus(1).to(c).gt(10).to(t/halt).is(_).print('\n'))
-==>halt=>false
->]@t
-[INFO]  [t] [fhatos] thread spawned: from(block(c),0).print('c: {_}').plus(1).to(c).gt(10).to(t/halt).is(_).print('\n') [stack size:noobj]
-c: 0
-c: 1
-c: 2
-c: 3
-c: 4
-c: 5
-c: 6
-c: 7
-c: 8
-c: 9
-c: 10
-fhatos> *c
-[INFO]  [/sys/scheduler] thread t stopped
-==>11
-----
-
 ++++
 <!-- 🐓 -->
 ++++
@@ -1064,10 +721,10 @@ Other machines in the cluster with a different bit-length encodings can still be
 However, overflow is possible, but can be automatically checked using types in `/mmadt/ext/` such as:
 `int8`, `int16`, `int32`.
 
-[cols="5,5"]
+[cols="5,5",separator=🧱]
 |===
 
-a|
+a🧱
 ++++
 <!-- 🐖 ./main_runner.out
 int[6].inspect()
@@ -1075,57 +732,21 @@ real[6.0].inspect()
 -->
 ++++
 
-[source,mmadt]
-----
-fhatos> int[6].inspect()
->[
-==>type=>[
-===>id=>/mmadt/int
-===>obj=>[int][_]
-===>dom=>[id=>/mmadt/obj,coeff=>[1,1]]
-===>rng=>[id=>/mmadt/int,coeff=>[1,1]]
-=>]
-==>value=>[
-===>obj=>6
-===>encoding=>int32_t
-=>]
->]
-fhatos> real[6.0].inspect()
->[
-==>type=>[
-===>id=>/mmadt/real
-===>obj=>[real][_]
-===>dom=>[id=>/mmadt/obj,coeff=>[1,1]]
-===>rng=>[id=>/mmadt/real,coeff=>[1,1]]
-=>]
-==>value=>[
-===>obj=>6.00000
-===>encoding=>float_t
-=>]
->]
-----
-
 ++++
 <!-- 🐓 -->
 ++++
 
-a|
+a🧱
 ++++
 <!-- 🐖 ./main_runner.out
 /sys/router/config/resolve/auto_prefix -> /
-  *(_) + \|[/mmadt/ext/]             --- <1>
+  *(_) + |[/mmadt/ext/]             --- <1>
 a -> int8[126]                       --- <2>
 @a + 1
 @a + 1
 @a + 1                               --- <3>
 -->
 ++++
-
-[source,mmadt]
-----
-fhatos> /sys/router/config/resolve/auto_prefix ->
-          *(_) + |[/mmadt/ext/]             // <1>
-----
 
 ++++
 <!-- 🐓 -->
@@ -1136,6 +757,7 @@ fhatos> /sys/router/config/resolve/auto_prefix ->
 <3> Triggering `int8` type error by overflowing its numeric range.
 
 |===
+
 ====
 
 ==== Functional Types
@@ -1147,24 +769,6 @@ The wildcard feature of the fURI scheme makes it possible to access instructions
 */mmadt/int/#
 -->
 ++++
-
-[source,mmadt]
-----
-fhatos> */mmadt/int/#
-==>[int][[_]]
-==>as?obj{?}<=int(isa?noobj<=obj(/mmadt/uri)[noobj])[cpp]
-==>div?int<=int(0?int=>_)[cpp]
-==>gt?bool<=int(arg?int=>_)[cpp]
-==>gte?bool<=int(arg?int=>_)[cpp]
-==>inspect?rec<=int(_)[cpp]
-==>lt?bool<=int(arg?int=>_)[cpp]
-==>lte?bool<=int(arg?int=>_)[cpp]
-==>minus?int<=int(0?int=>_)[cpp]
-==>mod?int<=int(isa?noobj<=obj(/mmadt/int)[noobj])[cpp]
-==>mult?int<=int(0?int=>_)[cpp]
-==>neg?int<=int(isa?noobj<=obj(/mmadt/int)[noobj])[cpp]
-==>plus?int<=int(0?int=>_)[cpp]
-----
 
 ++++
 <!-- 🐓 -->
@@ -1333,12 +937,6 @@ The router supports a chain `fos:frame` structures and, in this way, `fos:frame`
 <!-- 🐖 ./main_runner.out "34.make_bigger(a=>plus(10))[plus(*a)]" -->
 ++++
 
-[source,mmadt]
-----
-fhatos> 34.make_bigger(a=>plus(10))[plus(*a)]
-==>88
-----
-
 ++++
 <!-- 🐓 -->
 ++++
@@ -1358,17 +956,6 @@ For example, see how the internal `objs` if a `lst` are effected by the applicat
 2.lst[[1,plus(2),mult(plus(3)),'a']]
 -->
 ++++
-
-[source,mmadt]
-----
-fhatos> 2.lst[[1,plus(2),mult(plus(3)),'a']]
->[
-==>1
-==>4
-==>10
-==>'a'
->]
-----
 
 ++++
 <!-- 🐓 -->
@@ -1406,20 +993,6 @@ This is, in fact, the case.
 [a=>1,b=>2].b     // <5>
 -->
 ++++
-
-[source,mmadt]
-----
-fhatos> 1.plus(1)         // <1>
-==>2
-fhatos> 1. 2              // <2>
-==>2
-fhatos> 1.2.2             // <3>
-==>2
-fhatos> [1,2,3].<1>       // <4>
-==>2
-fhatos> [a=>1,b=>2].b     // <5>
-==>2
-----
 
 ++++
 <!-- 🐓 -->
@@ -1466,28 +1039,6 @@ noobj.[noobj=>1]
 -->
 ++++
 
-[source,mmadt]
-----
-fhatos> noobj.noobj
-fhatos> noobj.true
-==>true
-fhatos> noobj.6
-==>6
-fhatos> noobj.real[3.14]
-==>3.140000
-fhatos> noobj.a/b/c
-==>a/b/c
-fhatos> noobj.[1,2,3]
->[
-==>1
-==>2
-==>3
->]
-fhatos> noobj.[noobj=>1]
->[
->]
-----
-
 ++++
 <!-- 🐓 -->
 ++++
@@ -1510,36 +1061,6 @@ true.i?bool<=bool(_)[and(_,*<0>)]
 true.plus(false)
 -->
 ++++
-
-[source,mmadt]
-----
-fhatos> true.noobj
-fhatos> false.true
-==>true
-fhatos> false.6
-==>6
-fhatos> true.real[3.14]
-==>3.140000
-fhatos> true.a/b/c
-==>a/b/c
-fhatos> false.[1,2,3]
->[
-==>1
-==>2
-==>3
->]
-fhatos> true.[false=>0,true=>1]
->[
-==>false=>0
-==>true=>1
->]
-fhatos> true.i?bool<=bool(_)[and(_,*<0>)]
-[ERROR] [/mmadt/parser] noobj is not a lst as defined by [lst][_]
-		 \_/mmadt/noobj is not a subtype of /mmadt/lst
-	  thrown at inst noobj => true.i(noobj)[and(_,from(0))] [0=>noobj]
-fhatos> true.plus(false)
-==>true
-----
 
 ++++
 <!-- 🐓 -->
@@ -1568,21 +1089,6 @@ person[[name=>'lili',age=>129]]
 -->
 ++++
 
-[source,mmadt]
-----
-fhatos> person -> |[name?str=>_,age?nat=>?<120]
->[
-==>name?str=>_
-==>age?nat=>is(lt(120))
->]
-fhatos> person[[name=>'marko',age=>29]]
->person[
-==>name?str=>'marko'
-==>age?nat=>29
->]
-fhatos> person[[name=>'lili',age=>129]]
-----
-
 ++++
 <!-- 🐓 -->
 ++++
@@ -1598,20 +1104,6 @@ flow control::
 1.-|[is(gt(0))=>'good: {_}', _=>'bad:{_}']                --- <2>
 -->
 ++++
-
-[source,mmadt]
-----
-fhatos> 1.[a=>+10,b=>as(str).plus('abc')].[a=>mod(2),b=>+'def']   // <1>
->[
-==>a=>1
-==>b=>'1abcdef'
->]
-fhatos> 1.-|[is(gt(0))=>'good: {_}', _=>'bad:{_}']                // <2>
->[
-==>is(gt(0))=>'good: 1'
-==>_=>noobj
->]
-----
 
 ++++
 <!-- 🐓 -->
@@ -1658,13 +1150,6 @@ For instance, `if` is implemented with a two entry `rec`, where one entry maps t
 -->
 ++++
 
-[source,mmadt]
-----
-fhatos> /io/console/config/nest -> 0                  // <1>
-==>0
-fhatos> {1,2,3}.[is(gt(2)) => _, _ => noobj]          // <2>
-----
-
 ++++
 <!-- 🐓 -->
 ++++
@@ -1704,32 +1189,6 @@ a🧱
   _         => mult(100)]>-   --- <3>
 -->
 ++++
-
-[source,mmadt]
-----
-fhatos> {1,2,3}-|[
-          is(gt(2)) => mult(-1),      // <1>
-          _         => mult(100)]     // <2>
->[
-==>is(gt(2))=>noobj
-==>_=>100
->]
->[
-==>is(gt(2))=>noobj
-==>_=>200
->]
->[
-==>is(gt(2))=>-3
-==>_=>noobj
->]
-fhatos> === w/ merge ===
-fhatos> {1,2,3}-|[
-          is(gt(2)) => mult(-1),
-          _         => mult(100)]>-   // <3>
-==>100
-==>200
-==>-3
-----
 
 ++++
 <!-- 🐓 -->
@@ -1790,40 +1249,6 @@ a🧱
 -->
 ++++
 
-[source,mmadt]
-----
-fhatos> {1,2,3}-<[                // <1>
-          is(gt(0)) => mult(-1),
-          is(gt(1)) => mult(0),
-          is(gt(2)) => _]         // <2>
->[
-==>is(gt(0))=>-1
-==>is(gt(1))=>noobj
-==>is(gt(2))=>noobj
->]
->[
-==>is(gt(0))=>-2
-==>is(gt(1))=>0
-==>is(gt(2))=>noobj
->]
->[
-==>is(gt(0))=>-3
-==>is(gt(1))=>0
-==>is(gt(2))=>3
->]
-fhatos> === w/ merge ===
-fhatos> {1,2,3}-<[
-          is(gt(0)) => mult(-1),
-          is(gt(1)) => mult(0),
-          is(gt(2)) => _]>-       // <3>
-==>-1
-==>-2
-==>0
-==>-3
-==>0
-==>3
-----
-
 ++++
 <!-- 🐓 -->
 ++++
@@ -1875,14 +1300,6 @@ a🧱
 -->
 ++++
 
-[source,mmadt]
-----
-fhatos> {1,2,3}.[
-==>1
-==>2
-==>3
-----
-
 ++++
 <!-- 🐓 -->
 ++++
@@ -1922,11 +1339,6 @@ pattern::
 -->
 ++++
 
-[source,mmadt]
-----
-fhatos> --- todo
-----
-
 ++++
 <!-- 🐓 -->
 ++++
@@ -1941,12 +1353,6 @@ hash::
 --- todo
 -->
 ++++
-
-.conditional hash icon:link[link=https://en.wikipedia.org/wiki/Conditional_(computer_programming)#Hash-based_conditionals,2x,role=blue]
-[source,mmadt]
-----
-fhatos> --- todo
-----
 
 ++++
 <!-- 🐓 -->
@@ -1994,13 +1400,6 @@ a -> age[45]
 -->
 ++++
 
-[source,mmadt]
-----
-fhatos> age -> |(is(gt(0)).is(lt(120)))
-==>is?noobj<=obj(gt?noobj<=obj(0)[noobj])[noobj].is?noobj<=obj(lt?noobj<=obj(120)[noobj])[noobj]
-fhatos> a -> age[45]
-----
-
 ++++
 <!-- 🐓 -->
 ++++
@@ -2010,37 +1409,6 @@ fhatos> a -> age[45]
 ++++
 <!-- 🐖 ./main_runner.out "a?sub -> |print(_)" "a -> 12" "@a.inspect()" "@a.plus(1)" "@a.plus(1).plus(1)" -->
 ++++
-
-[source,mmadt]
-----
-fhatos> a?sub -> |print(_)
-==>print?noobj<=obj(_)[noobj]
-fhatos> a -> 12
-==>12
-12fhatos> @a.inspect()
->[
-==>type=>[
-===>id=>/mmadt/int
-===>obj=>[int][_]
-===>dom=>[id=>/mmadt/obj,coeff=>[1,1]]
-===>rng=>[id=>/mmadt/int,coeff=>[1,1]]
-=>]
-==>value=>[
-===>id=>a
-===>obj=>12
-===>encoding=>int32_t
-=>]
-==>sub=>[
-===>source=>/sys/scheduler
-===>pattern=>a
-===>on_recv=>print(_)
-=>]
->]
-12@afhatos> @a.plus(1)
-==>13@a
-13@afhatos> @a.plus(1).plus(1)
-==>15@a
-----
 
 ++++
 <!-- 🐓 -->
@@ -2064,24 +1432,6 @@ For instance, if a natural number stem:[\mathbb{N}] is any non-negative number, 
 ++++
 <!-- 🐖 ./main_runner.out "/type/int/nat -> |is(gt(0))" "nat[6]" "nat[-6]" "nat[3].plus(2)" "nat[3].mult(-2)" -->
 ++++
-
-[source,mmadt]
-----
-fhatos> /type/int/nat -> |is(gt(0))
-[ERROR] [/sys/router] no mounted structure for /type/int/nat
-==>is?noobj<=obj(gt?noobj<=obj(0)[noobj])[noobj]
-fhatos> nat[6]
-==>nat[6]
-fhatos> nat[-6]
-[ERROR] [/mmadt/parser] -6 is not a nat as defined by nat()[is(gte(0))]
-		 \_nat[-6] is not applicable with /mmadt/ext/nat?dom=/mmadt/int&dc=1,1&rng=/mmadt/int&rc=1,1
-fhatos> nat[3].plus(2)
-==>nat[5]
-fhatos> nat[3].mult(-2)
-[ERROR] [/mmadt/parser] -6 is not a /mmadt/ext/nat as defined by nat()[is(gte(0))]
-		 \_nat[-6] is not applicable with /mmadt/ext/nat?dom=/mmadt/int&dc=1,1&rng=/mmadt/int&rc=1,1
-	  thrown at inst nat[3] => mult(0?int=>-2)[cpp] [0=>-2]
-----
 
 ++++
 <!-- 🐓 -->
