--- a/docs/fhatos_mmadt.adoc
+++ b/docs/fhatos_mmadt.adoc
@@ -305,12 +305,12 @@ positional args::
 
 [stem]
 ++++
-\tt{obj}_\tt{in}.f(\color{yellow}{\_}, \color{yellow}{\_},\ldots,\__n) \mapsto \tt{obj}_\tt{out}
+\tt{obj}_\tt{in}.f(\color{yellow}{\__{0}}, \color{yellow}{\__{1}},\ldots,\color{yellow}{\__{n}}) \mapsto \tt{obj}_\tt{out}
 ++++
 
 An `inst` frame is defined by the `inst` https://en.wikipedia.org/wiki/Parameter_(computer_programming)[arguments].
 These arguments can be accessed within the `inst` via their `lst` position as a fURI.
-For example, `*<0>` references the first argument, `*<1>` the second argument, so on and so forth.
+For example, `\*<0>` references the first argument, `*<1>` the second argument, so on and so forth.
 
 ++++
 <!-- 🐖 ./main_runner.out
@@ -324,8 +324,8 @@ band -> |band?int{?}<=int(_,_)[is(and([gte(*<0>),lte(*<1>)]))]
 <!-- 🐓 -->
 ++++
 
-<1> ...
-<2> ...
+<1> `3` is within the band `[2,8]` and thus, `3` is the result, satisfying the `inst` range `int{?}`.
+<2> `10` is not within the band `[2,8]` and thus, `noobj` is the result, satisfying the `inst` range `int{?}`.
 
 --
 
@@ -454,7 +454,7 @@ Finally, a degenerate anonymous `inst` with no specified variable frame is simpl
 <1> The unnamed "band" `inst` is evaluated in line.
 <2> `min` and `max` are computed dynamically relative to the input.
 <3> The `inst` value is referencing undefined frame variables.
-<4> An anonymous `inst` is compiled to an "`obj` filter"-`inst`.
+<4> An anonymous `inst` is compiled to an `obj` filter-`inst`.
 <5> When arguments are embedded in the value, then the `inst` is simply `bcode`.
 --
 
@@ -482,7 +482,7 @@ dependent args::
 
 [stem]
 ++++
-\tt{obj}_\tt{in}.f(a_1 \Rightarrow x,a_2 \Rightarrow \color{yellow}{g(*a_1)},\ldots,a_n) \mapsto \tt{obj}_\tt{out}
+\tt{obj}_\tt{in}.f(a_1 \Rightarrow x,a_2 \Rightarrow \color{yellow}{g(\*a_1)},\ldots,a_n) \mapsto \tt{obj}_\tt{out}
 ++++
 
 If an argument's type is dependent on the value of another argument, then the argument is a https://en.m.wikipedia.org/wiki/Dependent_type[dependent argument].
